include_directories(../Bindings/C++)
include_directories(../../Extensions/Overlays/Bindings/C++)

IF(GLFW_FOUND)
    include_directories(${GLFW_INCLUDE_DIR})
    add_subdirectory(Framework)
    add_subdirectory(Chicago)
    add_subdirectory(Knight)
	add_subdirectory(ParticleVortex)
	add_subdirectory(Tessellator)
ENDIF(GLFW_FOUND)
