SET(OVERLAYS_EXTENSION_SOURCES
	extension.cpp	
	overlays.cpp
)

SET(OVERLAYS_EXTENSION_HEADERS	
	extension.h	
    overlays.h
)

if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64")
		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
        endif(${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64")
endif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
ADD_LIBRARY( Horde3DOverlays STATIC ${OVERLAYS_EXTENSION_SOURCES}  ${OVERLAYS_EXTENSION_HEADERS} )

