SET(TERRAIN_EXTENSION_SOURCES
	extension.cpp
	terrain.cpp
)

SET(TERRAIN_EXTENSION_HEADERS
	terrain.h
	extension.h	
)

INCLUDE_DIRECTORIES("../../../Horde3D/Source/Horde3DEngine" "../../../Horde3D/Source/Shared")

if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64")
		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
	endif(${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64")
endif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")

ADD_LIBRARY( Horde3DTerrain STATIC
    ${TERRAIN_EXTENSION_HEADERS} 
	${TERRAIN_EXTENSION_SOURCES}
)
